azure-kubernetes-service/resources/spring-boot-admin/springbootadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-admin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: spring-boot-admin
  strategy:
    rollingUpdate:
      maxSurge: 55%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app: spring-boot-admin
    spec:
      containers:
      - env:
          - name: JAVA_OPTS
            value: -Deureka.client.service-url.defaultZone=$(SPRING_EUREKA_SERVICE_URL)
        image: acmeacr.azurecr.io/spring-boot-admin:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 300
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 3
        name: spring-boot-admin
        ports:
        - containerPort: 8080
          name: app-port
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 3
        resources:
          limits:
            cpu: "1"
            ephemeral-storage: 5000Mi
            memory: 1Gi
          requests:
            cpu: "1"
            ephemeral-storage: 5000Mi
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - NET_RAW
          privileged: false
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
