azure-kubernetes-service/resources/spring-boot-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-admin
  namespace: default
spec:
  selector:
    app: spring-boot-admin
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
